fix notification dropdown overflow

--- a/public/less/profile/ProfileDropdown.less
+++ b/public/less/profile/ProfileDropdown.less
@@ -8,7 +8,7 @@
 }
 
 .notification-dropdown {
-	.popover-content {
+	.popover.bottom{
 		overflow-y: scroll;
 	}
 }
